# grunt_old

./: .gitignore  Cargo.toml  README.md
benchmarks/: Cargo.toml  benchmark_results.csv  run_benchmarks.sh
benchmarks/src/: export_borders_axis_params.rs  export_model_mask.rs  main.rs  model_generation.rs  random_border.rs
examples/: half_lift.rs  half_lift_at_an_angle.rs  inner_descent_cross.rs  inner_lift_cross.rs  outer_descent_cross.rs  outer_lift_cross.rs
misc/: 2d_viewer.py  model_viewer.py  old_viewer_model.py  requirements.txt
src/: lib.rs  main.rs
src/model2d/: export.rs  mod.rs
src/model3d/: convert_data.rs  export.rs  mod.rs
src/model3d/borders3d/: mod.rs  random_border.rs
src/model3d/fill3d/: filling_model_3d.rs  mod.rs
src/model3d/shifts3d/: add_shift_3d.rs  mod.rs
src/tests/: axis_test.rs  border_3d_test.rs  default_layers_dist_test.rs  mod.rs  model_fill_test.rs
src/types/: axis.rs  default_layers_dist.rs  layers_borders_gen.rs  layers_filling_gen.rs  mod.rs
src/types/generation_params/: mod.rs  params2d.rs  params3d.rs
src/types/shifts/: mod.rs  shift2d.rs  shift3d.rs
